--- a/my-react-app/src/Styles/education.css
+++ b/my-react-app/src/Styles/education.css
@@ -1,32 +1,26 @@
 .education-main-wrapper {
     position: relative;
-    width: 100%;
     height: 100%;
     background-color: #19182E;
-    color: #6B588F;
-    width: 100%;
+    color: rgb(174, 173, 173);
     border: 10px solid rgba(255, 255, 255, 0.2);
-    border-right: none;
+    width: 200%;
 }
 
 .school-wrapper {
     display: flex;
     position: relative; 
     left: 5%;
-    width: 150%;
 }
 
 .school-wrapper p {
-    font-size: 150%;
+    font-size: 180%;
 }
 
 .coursework-stack {
     position: relative;
     left: 5%;
-}
-
-.coursework-stack p {
-    font-size: 120%;
+    font-size: 140%;
 }
 
 .coursework-stack li {
@@ -34,13 +28,13 @@
 }
 
 .school-logo {
-    width: 10%;
-    height: auto;
+    width: auto;
+    height: 10%;
     margin-right: 2%;
 }
 
 .education-title {
     position: relative;
-    left: 25%;
+    left: 20%;
     font-size: 200%;
 }
