--- a/my-react-app/src/Styles/navbar.css
+++ b/my-react-app/src/Styles/navbar.css
@@ -13,7 +13,7 @@
       to right,
       #54b3d6,
       #54b3d6 50%,
-      #fff 50%
+      rgb(174, 173, 173) 50%
     );
     background-size: 200% 100%;
     background-position: -100%;
