--- a/my-react-app/src/Styles/navbar.css
+++ b/my-react-app/src/Styles/navbar.css
@@ -1,9 +1,6 @@
 .nav-bar {
-    position: fixed;
-    left: 85%;
-    top: 3%;
     display: flex; 
-    flex-direction: column; 
+    flex-direction: row; 
     font-size: 120%;
     z-index: 1000;
 }
@@ -25,6 +22,7 @@
     transition: all 0.3s ease-in-out;
 
     margin-top: 30%;
+    margin-right: 10%;
     color: white;
     text-decoration: none;
 }
