--- a/my-react-app/src/Styles/social.css
+++ b/my-react-app/src/Styles/social.css
@@ -14,7 +14,8 @@
 }
 
 .social-chain a {
-    margin-top: 5%;
+    margin-right: 2%; 
+    margin-top: 2.5%;
     text-decoration: none;
     transition: color 0.3s, transform 0.3s ease;
 }
