--- a/my-react-app/src/Styles/education.css
+++ b/my-react-app/src/Styles/education.css
@@ -3,9 +3,11 @@
     height: 100%;
     background-color: #19182E;
     color: rgb(174, 173, 173);
-    border: 10px solid rgba(255, 255, 255, 0.2);
-    width: 150%;
+    width: 100%;
     min-width: 30%;
+    padding-left: 20%;
+    padding-top: 5%;
+    padding-bottom: 5%;
 }
 
 .school-wrapper {
