--- a/my-react-app/src/Styles/navbar.css
+++ b/my-react-app/src/Styles/navbar.css
@@ -1,11 +1,10 @@
 .nav-bar {
-    position: fixed;
-    left: 85%;
     top: 3%;
     display: flex; 
-    flex-direction: column; 
+    flex-direction: row; 
     font-size: 120%;
     z-index: 1000;
+    margin-left: 2%;
 }
 
 .nav-bar a {
@@ -27,6 +26,7 @@
     margin-top: 30%;
     color: white;
     text-decoration: none;
+    margin-left: 10%;
 }
 
   
